crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/constants/member_access_cycle/generated/solc/0.8.16-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 6161] Error: The value of the constant A has a cyclic dependency via X.
   ╭─[input.sol:5:5]
   │
 5 │     uint256 internal constant A = X;
   │     ───────────────┬───────────────  
   │                    ╰───────────────── Error occurred here.
───╯

[TypeError 6161] Error: The value of the constant X has a cyclic dependency via A.
   ╭─[input.sol:8:1]
   │
 8 │ uint256 constant X = L.A;
   │ ────────────┬───────────  
   │             ╰───────────── Error occurred here.
───╯
